--- a/style.css
+++ b/style.css
@@ -49,67 +49,64 @@ select {
 /* CSS Reset End */
 
 body {
-  height: 100vh;
-  width: 100vw;
   font-family: "Space Grotesk", sans-serif;
-  background: #ffeedf;
+  background: #fff;
 }
+
 header {
-  display: flex;
-  position: relative;
-  padding-top: 10px;
-  padding-left: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #145434;
-}
-.caption {
   display: flex;
-  font-size: 36px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  border-bottom: 2px solid #145434;
+  font-weight: 700; 
   color: #145434;
+
 }
-#menu {
-  position: absolute;
-  right: 30px;
+
+h1 {
   font-size: 36px;
+}
+  
+
+.container {
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+  margin: 0 auto;
+  margin-top: 100px;
+  justify-content: center;
   align-items: center;
 }
-.container {
-  padding-top: 80px;
-  max-width: 1200px;
-  height: 100%;
-  grid-gap: 60px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  color: #fff;
-}
+
 .card {
   position: relative;
   height: 250px;
   width: 400px;
-  background-color: #fff;
   background-color: #145434;
+  color: #fff;
+  padding: 36px;   /*ha a card-ra tesszük minden oldalt a 36px paddingot, minden benne lévő elemre vonatkozik és a többire nem kell semmi*/
 }
 .title {
-  margin: 30px auto 30px 30px;
+  min-height: 90px;
   font-size: 36px;
   font-weight: 500;
+  border-bottom: 2px solid #fff;
 }
 
 .sub {
-  border-top: 1px solid #fff;
   padding-top: 10px;
-  margin: 0 30px;
   font-size: 18px;
   font-weight: 500;
 }
+
 .text {
-  margin-left: 30px;
   font-size: 18px;
   font-weight: bold;
 }
@@ -119,11 +116,13 @@ header {
   width: 40px;
   background-color: #fff;
   color: #145434;
-  border: 1px solid #145434;
+  border: 2px solid #145434;
   border-radius: 50%;
+  display: flex;            /*középre helyezésnél ez a 3 kell*/
+  justify-content: center;
+  align-items: center;
   font-size: 24px;
-  text-align: center;
-  top: -20px;
+  top: -20px;       /* eltolja az elemet*/
   left: -20px;
 }
 
@@ -135,26 +134,29 @@ button {
   right: -10px;
   background-color: #fff;
   color: #145434;
-  border: 1px solid #145434;
+  border: 2px solid #145434;
   font-size: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 button:hover {
   background-color: #145434;
   color: #fff;
-  border: 1px solid #fff;
-  cursor: pointer;
+  border: 2px solid #fff;
 }
-button span.material-icons {
-  position: relative;
-  left: 50px;
-  font-size: 36px;
+
+button .arrow {
+ position: absolute;
+ right: 5px;
+ font-size: 36px;
 }
-@media screen and (max-width: 960px) {
+/* a media nélkül is működik a reszponzivitás a flex-wrap miatt a container-re kell display:flex és flex-wrap:wrap*/
+/* 
+@media screen and (max-width: 935px) {
   .container {
-    grid-template-columns: 1fr;
+    flex-wrap: wrap;
     gap: 60px;
   }
-}
+} */
